--- a/web/components/styles/yt-icon.module.css
+++ b/web/components/styles/yt-icon.module.css
@@ -1,9 +1,12 @@
 .ytIcon {
-  display: block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   background-image: url("/youtube-icon.svg");
-  background-size: contain;
+  background-size: 100% 100%;
+  background-position: center;
   background-repeat: no-repeat;
-  width: 1em;
+  width: 1.1em;
   aspect-ratio: 28.57 / 20;
 }
 
